# cabal-build-info

./: .gitignore  CHANGELOG.md  README.md  cabal-build-info.cabal  cabal.project
.github/workflows/: haskell-ci.yml  haskell.yml
exe/: Main.hs
src/Cabal/: BuildInfo.hs  Plan.hs  Target.hs
src/Cabal/Json/: BuildInfo.hs  Common.hs  Plan.hs
tests/: Main.hs
tests/resources/golden/: hie-bios-build-info.json  hie-bios-exe.json  hie-bios-lib.json  hie-bios-parser.json
tests/resources/input/: hie-bios-build-info.json  hie-bios-exe.json  hie-bios-lib.json  hie-bios-parser.json
