cabal-version:      2.4
name:               cabal-build-info
version:            0.0.1.0
synopsis:
  Encoder and Decoder for Cabal's various json build artefacts.

description:
  Provides convenient encoder and decoder for Cabal's various json build artefacts.

bug-reports:        https://github.com/fendor/cabal-build-info/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fendor
maintainer:         fendor@posteo.de
extra-source-files:
  tests/resources/golden/*.json
  tests/resources/input/*.json

extra-doc-files:
  CHANGELOG.md

category:           development, mit, library
tested-with:        GHC ==9.6.4

library
  exposed-modules:
    Cabal.Json.BuildInfo
    Cabal.Json.Common
    Cabal.Json.Plan
    Cabal.Plan
    Cabal.Target

  build-depends:
    , aeson              ^>=2.2.0.0
    , aeson-combinators
    , base               >=4.12.0   && <4.19
    , containers
    , text               >=2.0      && <2.2

  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010

executable cabal-build-info
  main-is:          Main.hs
  hs-source-dirs:   exe
  ghc-options:      -Wall
  build-depends:
    , base
    , cabal-build-info
    , containers
    , directory
    , filepath
    , optparse-applicative
    , text

  default-language: Haskell2010

test-suite unit-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , cabal-build-info
    , filepath
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-golden
    , tasty-quickcheck
    , text

  hs-source-dirs:   tests/
  ghc-options:      -threaded -Wall
  main-is:          Main.hs

source-repository head
  type:     git
  location: git://github.com/fendor/cabal-build-info.git
